--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,25 +1,53 @@
 <!-- Plugin Configuration File. Read more: https://plugins.jetbrains.com/docs/intellij/plugin-configuration-file.html -->
 <idea-plugin>
     <!-- Unique identifier of the plugin. It should be FQN. It cannot be changed between the plugin versions. -->
-    <id>com.example.JiraImputation</id>
+    <id>com.jiraimputation.JiraImputation</id>
 
     <!-- Public plugin name should be written in Title Case.
          Guidelines: https://plugins.jetbrains.com/docs/marketplace/plugin-overview-page.html#plugin-name -->
     <name>JiraImputation</name>
 
     <!-- A displayed Vendor name or Organization ID displayed on the Plugins Page. -->
-    <vendor url="https://www.yourcompany.com">YourCompany</vendor>
+    <vendor url="https://www.google.com">Julien Dos Santos</vendor>
 
     <!-- Description of the plugin displayed on the Plugin Page and IDE Plugin Manager.
          Guidelines: https://plugins.jetbrains.com/docs/marketplace/plugin-overview-page.html#plugin-description -->
-    <description><![CDATA[
-    Enter short description for your plugin here.<br>
-    <em>most HTML tags may be used</em>
-  ]]></description>
+    <description>"This project is a side project from myself to get rid of the burden of the imputation process. Not meant to be online and mean for personal use</description>*/
 
+    <actions>
+        <action id="com.jiratracker.LogBranchAction"
+                class="com.jiraimputation.LogBranchAction"
+                text="Log Current Branch"
+                description="Logs the current Git branch to worklog.json">
+            <add-to-group group-id="ToolsMenu" anchor="last"/>
+        </action>
+    </actions>
+
+    <actions>
+        <action id="com.jiraimputation.ForceLogBranchAction"
+                class="com.jiraimputation.ForceLogBranchAction"
+                text="Forcer log branche maintenant"
+                description="Loggue manuellement la branche Git active">
+            <add-to-group group-id="ToolsMenu" anchor="last"/>
+        </action>
+    </actions>
     <!-- Product and plugin compatibility requirements.
-         Read more: https://plugins.jetbrains.com/docs/intellij/plugin-compatibility.html -->
-    <depends>com.intellij.modules.platform</depends>
+           Read more: https://plugins.jetbrains.com/docs/intellij/plugin-compatibility.html -->
+    <depends>com.intellij.modules.lang</depends>
+    <depends>Git4Idea</depends>
+
+    <extensions defaultExtensionNs="com.intellij">
+        <!-- Ton postStartupActivity ici -->
+        <postStartupActivity implementation="com.jiraimputation.TrackerPlugin"/>
+
+        <!-- Déclaration du groupe de notifications -->
+        <notificationGroup id="JiraImputation Notifications"
+                           displayType="BALLOON"
+                           isLogByDefault="true"/>
+    </extensions>
+
+
+
 
     <!-- Extension points defined by the plugin.
          Read more: https://plugins.jetbrains.com/docs/intellij/plugin-extension-points.html -->
