--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -18,7 +18,7 @@
         <action id="IntegrationTest"
                 class="com.jiraimputation.WorklogAggregateSendAction"
                 text="Call It A Day"
-                description="Test d'envoi vers Jira via JIR-1">
+                description="Send clean blocks to JIRA API">
             <add-to-group group-id="ToolsMenu" anchor="last"/>
         </action>
     </actions>
