--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -21,6 +21,13 @@
                 description="Send clean blocks to JIRA API">
             <add-to-group group-id="ToolsMenu" anchor="last"/>
         </action>
+
+        <action id="GoogleCalendarTestAction"
+                class="com.jiraimputation.actions.GoogleCalendarTestAction"
+                text="Test Google Calendar"
+                description="Affiche les prochains événements du calendrier">
+        <add-to-group group-id="ToolsMenu" anchor="last"/>
+        </action>
     </actions>
     <!-- Product and plugin compatibility requirements.
            Read more: https://plugins.jetbrains.com/docs/intellij/plugin-compatibility.html -->
