fix #11 I externalized the google oauth with a GCP Cloud function. The plugin now use the Cloud function to get a session.key and make call to google calendar APIs

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -28,6 +28,13 @@
                     text="Test Google Calendar"
                     description="Affiche les prochains événements du calendrier"/>
 
+            <action
+                    id="com.jiraimputation.actions.GoogleAuthAction"
+                    class="com.jiraimputation.actions.GoogleAuthAction"
+                    text="Login Google Calendar"
+                    description="Ouvre le navigateur pour connecter Google Calendar et enregistrer la clé de session." />
+
+
             <action id="LunchBreakToggleAction"
                     class="com.jiraimputation.actions.LunchBreakToggleAction"
                     text="Force Lunch Break"
